Use a DocumentBuilder to populate and style paragraphs